@@ -102,6 +102,11 @@ has 'changes_run' => (
     lazy    => 1,
 );
 
+around 'depends_on' => sub {
+    my ($orig, $self) = @_;
+    return ($self->changes_file, $self->$orig);
+};
+
 sub cmd_changes {
     my ( $self, @args ) = @_;
 
